# yanger

./: .env.example  .gitignore  OAUTH_SETUP_GUIDE.md  README.md  ROADMAP.md  demo_ui.py  install.sh  pyproject.toml  requirements.txt  test-log.json  test_auth.py  test_input_visibility.py  yanger_export_20250823_003659.json
config/: default_config.yaml
docs/: MCP_SERVER_PLAN.md
scripts/: README.md
scripts/debug/: debug_auth.py
scripts/takeout-refresh/: .gitignore  README.md  package-lock.json  package.json  refresh.js
scripts/test/: quick_test.py
src/yanger/: __init__.py  __main__.py  api_client.py  app.py  app.tcss  auth.py  bulkedit.py  cache.py  cli.py  command_logger.py  duplicates.py  export.py  filters.py  keybindings.py  mcp_server.py  models.py  operation_history.py  simple_ui.py  statistics.py  takeout.py
src/yanger/config/: __init__.py  settings.py
src/yanger/core/: __init__.py  custom_command.py  proxy.py  transcript_command.py  transcript_fetcher.py
src/yanger/ui/: __init__.py  bulkedit_preview.py  command_input.py  confirmation_modal.py  help_overlay.py  miller_view.py  playlist_creation_modal.py  rename_modal.py  search_input.py  status_bar.py
tests/: conftest.py  fakes.py  test_auth_paths.py  test_auto_fetch_transcript_caching.py  test_cache_migrations.py  test_cache_transcripts.py  test_cli_and_cache_hardening.py  test_command_widget.py  test_confirmation_modal_keys.py  test_custom_command.py  test_filters.py  test_harness.py  test_keybindings_registry.py  test_mcp_server.py  test_none_title_and_exit_codes.py  test_operation_history.py  test_pilot_harness.py  test_quota_persistence.py  test_run_command_app.py  test_takeout_import.py  test_theme_resolution.py  test_transcript_command.py  test_transcript_fetcher.py  test_transcript_service.py  test_transcript_settings.py
