# YouTube Ranger Project Configuration
# Created: 2025-08-03

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yanger"
version = "0.1.0"
description = "Terminal-based YouTube playlist manager inspired by ranger"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "YouTube Ranger Contributors"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.0",
    "textual>=0.47.0",
    "rich>=13.5.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "aiosqlite>=0.19.0",
    "python-dateutil>=2.8.2",
    "youtube-transcript-api>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML",
    "types-python-dateutil",
]

[project.scripts]
yanger = "yanger.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/yanger"
Issues = "https://github.com/yourusername/yanger/issues"

[tool.setuptools.packages.find]
where = ["src"]

# Ensure non-Python assets are included in the distribution
# so runtime CSS (app.tcss) is available when the package is installed.
[tool.setuptools.package-data]
yanger = [
    "app.tcss",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]